syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package user;

option go_package = "github.com/drifterz13/go-services/proto/user";

message User {
    string id = 1;
    string email = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message CreateUserRequest {
    string email = 1;
}

message FindUserRequest {
    string id = 1;
}

message FindUserResponse {
    User user = 1;
}

message FindUsersResponse {
    repeated User users = 1;
}

service UserService {
    rpc FindUsers(google.protobuf.Empty)
        returns (FindUsersResponse);
    rpc FindUser(FindUserRequest)
        returns (FindUserResponse);
    rpc CreateUser(CreateUserRequest)
        returns (google.protobuf.Empty);
}